--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -145,18 +145,12 @@ layout: default
               <div class="grid-x">
                   {% if resource.thumbnail-image %}
                     <div class="small-6 xxlarge-4 cell padding-right-1 padding-bottom-1">
-                      <img src="{{ resource.thumbnail-image }}" />
+                      <a href="{{ resource.url }}"><img src="{{ resource.thumbnail-image }}" /></a>
                     </div>
                   {% endif %}
                   <div class="small-12{% if resource.thumbnail-image %} xxlarge-8{% endif %} cell">
-                    <h3 class="margin-top-0">{{resource.title}}</h3>
+                    <h3 class="margin-top-0"><a href="{{ resource.url }}">{{resource.title}}</a></h3>
                     <p><span class="label text-capitalize">{{ resource.resource_type }}</span></p>
-                    <p>Download in
-                      {% for file in resource.files %}
-                        {% assign lang_code = file[0] %}
-                        <a href="{{ file[1] }}">{{ site.data.language_names[lang_code]['name'] | capitalize }}</a>{% unless forloop.last %},{% endunless %}
-                      {% endfor %}
-                    </p>
                     <!--<p class="h5 sans-regular medium-gray">{% if resource.author %}{{ resource.author }} · {% endif %}{{ resource.date | date: site.date_format }}</p>-->
                   </div>
               </div>
